--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "engines":{
+  "engines": {
     "node": ">=10.19.0",
     "npm": ">=6.14.0"
   },
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
